# tQST-And-permutation-equivariant-neural-networks-enhanced-QEC

./: .gitignore  README.md  metrics.json  pyproject.toml  requirements.txt  setup.py  user So give me complete.txt
benchmarking/: README.md  benchmark.py  pemlp_qec.py  train.py
benchmarking/ibmq/: __init__.py  adaptive_tqst.py  quantum_error_correction.py  train_ibmq.py
benchmarking/plots/: benchmark_results.json
mlqec/: config.py  config.py.bkp  quantum_state_generator.py  train.py  utils.py
mlqec/models/: pemlp.py
rep_2502.15305v1/: README.md  replicate.py  requirements.txt
rep_2502.15305v1/venv_cuda12/: pyvenv.cfg
