[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlqec"
version = "0.1.0"
authors = [
    { name="Debasis", email="debasis@example.com" },
]
description = "Machine Learning for Quantum Error Correction"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.19.5",
    "matplotlib>=3.4.3",
    "qiskit<1.0.0",
    "qiskit-aer<0.13.0",
    "qiskit-ibmq-provider<0.20.0",
    "qiskit-ignis<0.8.0",
    "tensorboard>=2.7.0"
]

[tool.setuptools]
packages = ["mlqec"]
